# chakra-vault

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  NO_HF_UPLOAD_POLICY.md  ROADMAP.md  SECURITY.md  TESTING.md  cli.md  download-workflow.md  install.md  release-checklist.md  roadmap.md
scripts/: check_no_hf_upload.py  check_no_large_files.py  check_no_private_paths.py
src/chakra_vault/: __init__.py  cli.py
src/chakra_vault/downloader/: __init__.py  executor.py
src/chakra_vault/downloads/: __init__.py  service.py  throttle.py
src/chakra_vault/planner/: __init__.py  download_plan.py
src/chakra_vault/providers/: __init__.py  huggingface.py  huggingface_download.py
src/chakra_vault/verify/: __init__.py  hasher.py  types.py  verifier.py
src/chakra_vault/workflows/: __init__.py  model_download.py
tests/: test_cli_smoke.py  test_import.py  test_safety_scripts.py
tests/unit/: test_cli.py  test_download_executor.py  test_download_planner.py  test_download_service.py  test_download_throttle.py  test_huggingface_download_source.py  test_huggingface_metadata_client.py  test_model_download_workflow.py  test_verify_hasher.py  test_verify_verifier.py
